Tried to fix game loop